--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap");
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
+  font-family: "Comfortaa", Arial, Helvetica, sans-serif;
 }
 
 .app {
@@ -44,7 +44,7 @@ form {
   margin-bottom: 50px;
 }
 
-input[type='text'] {
+input[type="text"] {
   min-width: 400px;
   border-radius: 50px;
   padding: 15px 20px;
@@ -55,8 +55,8 @@ input[type='text'] {
   transition: 0.3s ease border-color;
 }
 
-input[type='text']:active,
-input[type='text']:focus {
+input[type="text"]:active,
+input[type="text"]:focus {
   border-color: #999;
 }
 
@@ -103,6 +103,6 @@ button:hover {
   object-fit: cover;
 }
 
-.image:nth-child(3n) {
+.image:nth-child(5n) {
   grid-column-end: span 2;
 }
